[gd_scene load_steps=11 format=2]

[ext_resource path="res://RunnerScene/enemy_spawn.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://RunnerScene/Tiles/IMG_1086.png" type="Texture" id=3]
[ext_resource path="res://RunnerScene/Tiles/IMG_1087.png" type="Texture" id=4]
[ext_resource path="res://RunnerScene/Tiles/IMG_1084.png" type="Texture" id=5]
[ext_resource path="res://RunnerScene/Player.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 88, 85 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 965.5, 76 )

[node name="Runner" type="Node2D"]
script = ExtResource( 1 )

[node name="FrontTile_01" type="AnimatedSprite" parent="."]
position = Vector2( 0, 540 )
scale = Vector2( 1.16, 1.16 )
frames = SubResource( 1 )
offset = Vector2( -540, 0 )

[node name="FrontTile_02" type="AnimatedSprite" parent="."]
position = Vector2( 1238, 540 )
scale = Vector2( 1.16, 1.16 )
frames = SubResource( 1 )
offset = Vector2( -540, 0 )

[node name="FrontTile_03" type="AnimatedSprite" parent="."]
position = Vector2( 2476, 540 )
scale = Vector2( 1.16, 1.16 )
frames = SubResource( 1 )
offset = Vector2( -540, 0 )

[node name="FrontTile_04" type="AnimatedSprite" parent="."]
position = Vector2( 3714, 540 )
scale = Vector2( 1.16, 1.16 )
frames = SubResource( 1 )
offset = Vector2( -540, 0 )

[node name="Player_runner" type="KinematicBody2D" parent="."]
position = Vector2( 318, 809 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_runner"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player_runner"]
scale = Vector2( 2.90625, 2.75 )
frames = SubResource( 3 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 317, 972 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 647.5, 0 )
shape = SubResource( 4 )
